zokrates_cli/examples/compile_errors/constant_array_size_type_mismatch_u8.zok
const u8 SIZE = 0x02;

def main(field[SIZE] n) {
    return;
}
